--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 *{
-    background-color: whitesmoke;
+    background-color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
@@ -28,7 +28,7 @@ header{
     height: 20vh;
     margin: 40px;  
     position: relative;
-    left: 40%;
+    left: 40%; 
 }
 
 
@@ -43,4 +43,27 @@ body{
     margin: 0;
     display: flex;
     flex-direction: column;
+}
+footer{
+    padding: 20px;
+    border: 2px solid black;
+    text-align: center;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    z-index: 1;
+    
+    
+}
+nav{
+    display: flex;
+    justify-content: space-evenly;
+}
+i{
+    color:black;
+    transition: 0.2s;
+}
+i:hover{
+ color:red;
+ 
 }
