--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@ header{
     text-align: center;
     position: sticky;
     top: 0;
-   
     z-index: 1;
     color: white;
     box-shadow: 0px 5px 15px#4A628A;
@@ -53,9 +52,9 @@ footer{
     padding: 20px;
     border: 2px solid black;
     text-align: center;
-    position: sticky;
+    position: fixed;
+    width: 400px;
     bottom: 0;
-   
     z-index: 1;
     background-color: #4A628A;
     
@@ -79,4 +78,13 @@ nav{
 }
 .answer{
     display: none;
+}
+#circle{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #4A628A;;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
