--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,9 @@ footer{
     border: 2px solid black;
     text-align: center;
     position: fixed;
-    width: 400px;
     bottom: 0;
+    left: 0;
+    width: 100%;
     z-index: 1;
     background-color: #4A628A;
     
