--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 *{
     
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -35,7 +37,7 @@ header{
 }
 
 
-button{
+.submit_button{
     box-shadow: 2px 2px 2px black;
     width: 150px;
     height: 40px;
@@ -47,6 +49,8 @@ body{
     margin: 0;
     display: flex;
     flex-direction: column;
+    background-color: #eee;
+  transition: 0.2s ease-out;
 }
 footer{
     padding: 20px;
@@ -77,7 +81,7 @@ nav{
     top: 30px;
     right:20px
 }
-.answer{
+.hidden{
     display: none;
 }
 #circle{
@@ -89,3 +93,24 @@ nav{
    justify-content: center;
    align-items: center;
 }
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.submit_button{
+    align-self: center;
+}
+#bookmarkButton{
+    display: flex;
+    position:absolute;
+    top: 30px;
+    right:20px;
+    background :none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+.dark {
+    background-color: #333;
+    color: #eee;}
